double scroll test fix & open links on new tab

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 html {
   font-family: "Dosis", sans-serif;
   font-size: 16px;
+  overflow: hidden; 
 }
 
 section {
